fix: restore center alignment for main container

--- a/frontend/src/frontHome/Content/ContentHome/index.sass
+++ b/frontend/src/frontHome/Content/ContentHome/index.sass
@@ -90,7 +90,7 @@ $container-background-color-dark: linear-gradient(to left, rgba(0, 0, 0,0.6), rg
   overflow-x: hidden
   display: flex
   flex-direction: column
-  align-items: flex-start
+  align-items: center
   padding: 80px 0 80px 0
   background: var(--container-background-color)
   .TopArticle
